# Sistema_de_Gestao_de_Incendios

./: .gitignore  CMakeLists.txt  README.md  equipamentos.h  logs.c  logs.h  ocorrencias.c  ocorrencias.h  persistencia.c  relatorios.c  relatorios.h  sugestoes.c  utils.c
include/: bombeiros.h  intervencoes.h  menu.h  modelos.h  persistencia.h  sugestoes.h  utils.h
src/: bombeiros.c  bombeiros.h  equipamentos.c  equipamentos.h  intervencoes.c  intervencoes.h  main.c  menu.c  modelos.h  ocorrencias.h  persistencia.h  relatorios.h  sgi.h  sugestoes.h  tipos_comuns.h  utils.h
